<b><u> v2.04, 28.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add an inGame Changelog (thx Blazeflack for helping me).
<font color=#FF8C00>&#9830;</font> Install: Enable AB3 + 5 better safe than sorry.
<font color=#FF8C00>&#9830;</font> Install: Change the goldformat to 'CONDENSED'.
<font color=#FF8C00>&#9830;</font> Install: Switch Datatext position of S&L Currency + MUI System.
<font color=#FF8C00>&#9830;</font> Remove fix for blank tooltip. Part of ElvUI now.
<font color=#FF8C00>&#9830;</font> Skins: Update quest skin.

<b><u> v2.03, 25.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Remove GameMenu Button. (ElvUI's Button is enough)
<font color=#FF8C00>&#9830;</font> Fix a lua error in speccswitch datatext if there is no texture selected. (<a href="http://git.tukui.org/Merathilis/ElvUI_MerathilisUI/issues/15">#15</a>)
<font color=#FF8C00>&#9830;</font> Install: Add missing settings for ActionBar6. (damn it)
<font color=#FF8C00>&#9830;</font> Skins: Delete skining of SLE, will be part in BenikUI.
<font color=#FF8C00>&#9830;</font> Skins: Add skins for gossip frame & quest frame (taken from AddOnSkins)

<b><u> v2.02, 24.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Fix a lua error.
<font color=#FF8C00>&#9830;</font> Install: Adjust some SLE settings.
<font color=#FF8C00>&#9830;</font> Install: Adjust the Layout. I hope you like it.
<font color=#FF8C00>&#9830;</font> Misc: Add an incompatibily check if LocPlus and Shadow & Light (LocPanel) are enable at the same time.

<b><u> v2.01, 21.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Add some general ElvUI options.
<font color=#FF8C00>&#9830;</font> Install: Remove coloring for SubSpell Names in SpellBook.
<font color=#FF8C00>&#9830;</font> Install: Change the height of the RaidFrames/ FocusFrames.
<font color=#FF8C00>&#9830;</font> Install: Remove some SLE settings.

<b><u> v2.00, 19.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> UPDATE FOR LEGION