@@ -16,14 +16,11 @@ local classColor = E.myclass == 'PRIEST' and E.PriestColors or (CUSTOM_CLASS_COL
 local flat = [[Interface\AddOns\ElvUI_MerathilisUI\media\textures\Flat]]
 
 local ChangeLog = CreateFrame("frame")
-local ChangeLogData = [=[|cffff7d0av2.04|r, 28.07.2016
+local ChangeLogData = [=[|cffff7d0av2.05|r, 29.07.2016
 
- |cffff7d0a•|r Add an inGame Changelog (thx Blazeflack for helping me).
- |cffff7d0a•|r Install: Enable AB3 + 5 better safe than sorry.
- |cffff7d0a•|r Install: Change the goldformat to 'CONDENSED'.
- |cffff7d0a•|r Install: Switch Datatext position of S&L Currency + MUI System.
- |cffff7d0a•|r Remove fix for blank tooltip. Part of ElvUI now.
- |cffff7d0a•|r Skins: Update quest skin.
+ |cffff7d0a•|r Install: Fix Datatexts if ElvUI_SLE is enabled.
+ |cffff7d0a•|r Misc: Attempt to fix a weird nil error.
+ |cffff7d0a•|r Skins: Add quest level to the ObjectiveTracker.
 ]=];
 
 local frame = CreateFrame("Frame", "MerathilisUIChangeLog", E.UIParent)
